[BUGFIX] megapony-object-valign-middle: Total width of child is not always 100%
* Adds additional class "full-width" for special valign objects (see example 1 in the changed demo)
* Adds demo examples for 2 different cases (WITH optional "full-width" class & WITHOUT the class)
* Disables no-side-by-side behaviour for full-width valign-middle objects (behaviour's just like tables behaves), enabled only for fixed width cells

Fixes #10

--- a/Css/_megapony/megapony.css
+++ b/Css/_megapony/megapony.css
@@ -646,6 +646,22 @@ sub {
     vertical-align: middle; }
   .megapony-object-valign-middle .right > * {
     float: right; }
+  .megapony-object-valign-middle.full-width .left, .megapony-object-valign-middle.full-width .center, .megapony-object-valign-middle.full-width .right {
+    width: 100%;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -ms-box-sizing: border-box; }
+  .megapony-object-valign-middle.no-side-by-side {
+    display: block; }
+    .megapony-object-valign-middle.no-side-by-side .left, .megapony-object-valign-middle.no-side-by-side .center, .megapony-object-valign-middle.no-side-by-side .right {
+      display: block;
+      width: auto !important;
+      max-width: 100% !important; }
+    .megapony-object-valign-middle.no-side-by-side .left {
+      margin-right: 0 !important; }
+    .megapony-object-valign-middle.no-side-by-side .right {
+      margin-left: 0 !important; }
 
 .l-integration-tests .test-results {
   width: 30px;
