--- a/Css/app/app.css
+++ b/Css/app/app.css
@@ -218,6 +218,11 @@ body.megapony-max-width-600 .l-banner {
 .l-cssobjects .megapony-object-media .leader {
   margin-bottom: 5px;
   margin-bottom: 0.3125rem; }
+.l-cssobjects #demo-object-valign-middle input[type="text"] {
+  width: 300px;
+  margin-right: 15px; }
+.l-cssobjects #demo-object-valign-middle.no-side-by-side input[type="text"] {
+  margin-bottom: 10px; }
 
 .l-columns [class*="megapony-object-columns-"] {
   margin-bottom: 30px;
@@ -478,8 +483,11 @@ textarea {
 input[type="text"], input[type="email"], input[type="date"], textarea, select {
   background: #fff;
   border: 1px solid #c8ccd0;
-  width: 240px;
-  width: 15rem;
+  width: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
   padding-top: 8px;
   padding-top: 0.5rem;
   padding-bottom: 8px;
