--- a/Scss/app/layout.scss
+++ b/Scss/app/layout.scss
@@ -208,6 +208,15 @@
 			@include rem(margin-bottom, 5);
 		}
 	}
+	#demo-object-valign-middle {
+		input[type="text"] {
+			width: 300px;
+			margin-right: 15px;
+		}
+		&.no-side-by-side {
+			input[type="text"] { margin-bottom: 10px; }
+		}
+	}
 }
 
 .l-columns {
